add documentation api candidature
